--- a/views/employeeViews/createEmployeeForm.ejs
+++ b/views/employeeViews/createEmployeeForm.ejs
@@ -1,10 +1,10 @@
 <% layout('/layout/fullNavBarBoilerplate') %>
     <!--TODO: client side Validation-->
     <div class="container-fluid">
-        <div class="row mt-md-2 ms-md-2">
+        <div class="row mt-md-2 ms-md-2 mb-4">
             <div class="col col-md-5 border border-secondary rounded">
                 <h1>Create New Employee</h1>
-                <form action="/employees" method="post">
+                <form action="/employees" method="post" enctype="multipart/form-data">
                     <div class="col-md-6 mt-3">
                         <label for="firstName" class="form-label">First Name</label>
                         <input type="text" class="form-control" id="firstName" name="firstName">
@@ -59,6 +59,10 @@
                                 </option>
                                 <% }) %>
                         </select>
+                    </div>
+                    <div class="my-3">
+                        <label for="formFile" class="form-label">Upload Image</label>
+                        <input class="form-control" type="file" id="formFile" name="empImage">
                     </div>
                     <div class="form-group mt-3 mb-3">
                         <button class="btn btn-primary btn-lg" type="submit">Submit</button>
