--- a/views/employeeViews/createEmployeeForm.ejs
+++ b/views/employeeViews/createEmployeeForm.ejs
@@ -2,7 +2,7 @@
     <!--TODO: client side Validation-->
     <div class="container-fluid">
         <div class="row mt-md-2 ms-md-2 mb-4">
-            <div class="col col-md-5 border border-secondary rounded">
+            <div class="col col-md-4 border border-secondary rounded">
                 <h1>Create New Employee</h1>
                 <form action="/employees" method="post" enctype="multipart/form-data">
                     <div class="col-md-6 mt-3">
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-md-6">
                         <label for="department" class="form-label mt-md-1">Department</label>
-                        <select class="form-select" aria-label="Default select example" name="departmentId"
+                        <select class="form-select" aria-label="Default select example" name="deptId"
                             id="department">
                             <option selected>Select Department</option>
                             <% departments.forEach(element=> { %>
@@ -60,9 +60,9 @@
                                 <% }) %>
                         </select>
                     </div>
-                    <div class="my-3">
+                    <div class="my-3 col-md-6">
                         <label for="formFile" class="form-label">Upload Image</label>
-                        <input class="form-control" type="file" id="formFile" name="empImage">
+                        <input class="form-control form-control-lg" type="file" id="formFile" name="empImage">
                     </div>
                     <div class="form-group mt-3 mb-3">
                         <button class="btn btn-primary btn-lg" type="submit">Submit</button>
